--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
     .brand img {
-      max-width: 120px;
+      max-width: 140px;
       margin-bottom: 1rem;
     }
     .buttons a {
@@ -68,7 +68,7 @@
 <body>
   <header>
     <h1>Rendezvous Foods & Lifestyle</h1>
-    <p>Where purity meets flavor – Pure Veg | Vegan | Jain | Satvik | Indo-Chinese</p>
+    <p>A premium vegetarian restaurant group with multi-brand excellence — Jain, Vegan, Satvik, and Indo-Chinese specializations</p>
     <nav>
       <a href="#brands">Our Brands</a>
     </nav>
@@ -76,45 +76,48 @@
 
   <section>
     <h2>About Us</h2>
-    <p>Welcome to Rendezvous Foods & Lifestyle — a proud home of premium vegetarian food brands in Bangalore. Our mission is to bring flavorful, clean, and inclusive dining experiences to all. From authentic North Indian delicacies to vibrant Indo-Chinese cuisine and strict Jain meals, each of our brands is built around purity, passion, and palate-pleasing perfection.</p>
+    <p>Rendezvous Foods & Lifestyle is a Bangalore-based pure vegetarian food group with a growing portfolio of restaurant brands. From authentic North Indian cuisine to strictly Jain meals and bold Indo-Chinese creations, we cater to diverse dietary preferences with unwavering commitment to purity, flavor, and innovation. With customer trust at our core, we are expanding into new concepts while retaining the essence of what makes each meal unforgettable.</p>
   </section>
 
   <section id="brands" class="brand-section">
     <div class="brand">
-      <img src="https://via.placeholder.com/150?text=Food+Affair+Logo" alt="Food Affair Logo">
+      <img src="Original Logo.png" alt="Food Affair Logo">
       <h2>Food Affair</h2>
       <p>Dine-in | Online Orders | Jain, Vegan, Satvik, Vaishnav Options</p>
+      <p><em>"Coz, food never breaks hearts!"</em></p>
       <div class="buttons">
-        <a href="https://foodaffair.in" target="_blank">Order on Website</a>
-        <a href="https://www.zomato.com/bangalore/food-affair" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/restaurants/food-affair" target="_blank">Swiggy</a>
+        <a href="http://food-affair.in" target="_blank">Order on Website</a>
+        <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
+        <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
+        <a href="https://g.co/kgs/v8BLr1t" target="_blank">Google</a>
+        <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
       </div>
     </div>
 
     <div class="brand">
       <img src="https://via.placeholder.com/150?text=Jain+Food+House" alt="Jain Food House Logo">
       <h2>Jain Food House</h2>
-      <p>Strictly Jain cuisine — no onion, no garlic. Delivery only.</p>
+      <p>Strictly Jain cuisine — no onion, no garlic. 100% pure, delivered to your doorstep.</p>
       <div class="buttons">
-        <a href="https://www.zomato.com/bangalore/jain-food-house" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/restaurants/jain-food-house" target="_blank">Swiggy</a>
+        <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+        <a href="https://www.swiggy.com/city/bangalore/jain-food-court-vijaya-bank-colony-bilekahalli-rest532809" target="_blank">Swiggy</a>
       </div>
     </div>
 
     <div class="brand">
       <img src="https://via.placeholder.com/150?text=Wok+Of+Love" alt="Wok Of Love Logo">
       <h2>Wok Of Love</h2>
-      <p>Pure Veg Indo-Chinese cuisine. Big flavors, guilt-free indulgence.</p>
+      <p>Pure Veg Indo-Chinese delicacies — bold, fiery, and flavor-packed.</p>
       <div class="buttons">
-        <a href="https://www.zomato.com/bangalore/wok-of-love" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/restaurants/wok-of-love" target="_blank">Swiggy</a>
+        <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+        <a href="https://www.swiggy.com/city/bangalore/wok-of-love-btm-4th-stage-arekere-rest966202" target="_blank">Swiggy</a>
       </div>
     </div>
   </section>
 
   <footer>
     <p>&copy; 2025 Rendezvous Foods & Lifestyle | Bangalore, India</p>
-    <p>Crafted with care. Powered by purity.</p>
+    <p>More brands coming soon. Built on taste. Backed by trust.</p>
   </footer>
 </body>
 </html>
