--- a/index.html
+++ b/index.html
@@ -57,6 +57,20 @@
       border-radius: 4px;
       text-decoration: none;
     }
+    .map {
+      margin-top: 1rem;
+    }
+    iframe {
+      width: 100%;
+      height: 250px;
+      border: none;
+      border-radius: 6px;
+    }
+    .review {
+      font-size: 0.95rem;
+      color: #555;
+      margin-top: 0.5rem;
+    }
     footer {
       background-color: #222;
       color: #ccc;
@@ -89,8 +103,11 @@
         <a href="http://food-affair.in" target="_blank">Order on Website</a>
         <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
         <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
-        <a href="https://g.co/kgs/v8BLr1t" target="_blank">Google</a>
         <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
+      </div>
+      <div class="review">⭐ 4.5 on Google (700+ reviews)</div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62203.1991042479!2d77.55130241701906!3d12.91209574783088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157bfbcb8e75%3A0x8c8c02d2fc8b802f!2sFood%20Affair%20-%20Veg%20Family%20Restaurant!5e0!3m2!1sen!2sin!4v1718792481677!5m2!1sen!2sin" loading="lazy" allowfullscreen></iframe>
       </div>
     </div>
 
