--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
       color: #333;
     }
     header {
-      background-color: #ff7043;
+      background: linear-gradient(to right, #d84315, #ff7043);
       color: white;
       padding: 2rem 1rem;
       text-align: center;
     }
     header h1 {
-      font-size: 2.5rem;
-      letter-spacing: 1px;
+      font-size: 2.8rem;
       font-weight: 900;
       text-transform: uppercase;
+      letter-spacing: 2px;
     }
     nav a {
       margin: 0 1rem;
@@ -38,61 +38,69 @@
     .brand-section {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-around;
+      justify-content: space-between;
       gap: 2rem;
     }
     .brand {
-      flex: 1 1 300px;
-      padding: 1.5rem;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      background-color: #fdfdfd;
-      text-align: center;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      flex: 1 1 30%;
+      padding: 1rem;
+      border-radius: 12px;
+      background: #ffffff;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
+      position: relative;
     }
     .brand:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      transform: translateY(-8px);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
     }
     .brand h2 {
-      font-size: 1.75rem;
-      color: #d84315;
-      font-weight: 800;
-      margin-bottom: 0.5rem;
+      background: linear-gradient(to right, #ff7043, #ffa726);
+      color: white;
+      font-size: 1.6rem;
+      font-weight: bold;
+      padding: 0.5rem;
+      border-radius: 8px 8px 0 0;
+      margin: -1rem -1rem 1rem -1rem;
       text-transform: uppercase;
     }
+    .brand p {
+      margin-bottom: 0.5rem;
+    }
     .brand img {
-      display: none;
+      width: 100%;
+      max-height: 180px;
+      object-fit: cover;
+      border-radius: 8px;
+      margin-bottom: 1rem;
     }
     .buttons a {
       display: inline-block;
-      margin: 0.3rem;
-      padding: 0.5rem 1rem;
+      margin: 0.3rem 0.2rem;
+      padding: 0.5rem 0.8rem;
       background-color: #ff7043;
       color: white;
       border-radius: 4px;
       text-decoration: none;
-    }
-    .map {
-      margin-top: 1rem;
-    }
-    iframe {
-      width: 100%;
-      height: 250px;
-      border: none;
-      border-radius: 6px;
+      font-size: 0.9rem;
     }
     .review {
       font-size: 0.95rem;
       color: #555;
       margin-top: 0.5rem;
     }
+    .map iframe {
+      width: 100%;
+      height: 200px;
+      border: none;
+      border-radius: 8px;
+      margin-top: 1rem;
+    }
     .coming-soon {
       text-align: center;
       margin-top: 4rem;
       padding: 2rem;
-      background: #fff3e0;
+      background: linear-gradient(to right, #fff3e0, #ffe0b2);
       border: 2px dashed #ffa726;
       border-radius: 12px;
     }
@@ -131,6 +139,7 @@
   <section id="brands" class="brand-section">
     <div class="brand">
       <h2>Food Affair</h2>
+      <img src="https://source.unsplash.com/800x600/?indian-food" alt="Food Affair">
       <p>Dine-in | Online Orders | Jain, Vegan, Satvik, Vaishnav Options</p>
       <p><em>"Coz, food never breaks hearts!"</em></p>
       <div class="buttons">
@@ -147,6 +156,7 @@
 
     <div class="brand">
       <h2>Jain Food House</h2>
+      <img src="https://source.unsplash.com/800x600/?jain-food" alt="Jain Food House">
       <p>Strictly Jain cuisine — no onion, no garlic. 100% pure, delivered to your doorstep.</p>
       <div class="buttons">
         <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
@@ -156,6 +166,7 @@
 
     <div class="brand">
       <h2>Wok Of Love</h2>
+      <img src="https://source.unsplash.com/800x600/?chinese-food" alt="Wok Of Love">
       <p>Pure Veg Indo-Chinese delicacies — bold, fiery, and flavor-packed.</p>
       <div class="buttons">
         <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
