--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
+      background-color: #fdf7f1;
+      color: #3e2f1c;
     }
     header {
-      background-color: #37474f;
+      background-color: #6d4c41;
       color: white;
       padding: 2rem 1rem;
       text-align: center;
@@ -45,7 +45,7 @@
       flex: 1 1 30%;
       padding: 1rem;
       border-radius: 12px;
-      background: #ffffff;
+      background: #fffaf2;
       box-shadow: 0 4px 16px rgba(0, 0, 0, 0.05);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       position: relative;
@@ -63,22 +63,15 @@
       color: white;
       text-align: center;
     }
-    .brand:nth-child(1) h2 { background-color: #c62828; } /* Food Affair - deep red */
-    .brand:nth-child(2) h2 { background-color: #2e7d32; } /* Jain Food House - green */
-    .brand:nth-child(3) h2 { background-color: #283593; } /* Wok Of Love - blue */
+    .brand:nth-child(1) h2 { background-color: #8d6e63; } /* Food Affair - earthy brown */
+    .brand:nth-child(2) h2 { background-color: #a1887f; } /* Jain Food House - clay */
+    .brand:nth-child(3) h2 { background-color: #5d4037; } /* Wok Of Love - dark walnut */
 
-    .brand img {
-      width: 100%;
-      max-height: 160px;
-      object-fit: cover;
-      border-radius: 8px;
-      margin-bottom: 1rem;
-    }
     .buttons a {
       display: inline-block;
       margin: 0.3rem 0.2rem;
       padding: 0.5rem 0.8rem;
-      background-color: #546e7a;
+      background-color: #6d4c41;
       color: white;
       border-radius: 4px;
       text-decoration: none;
@@ -86,7 +79,7 @@
     }
     .review {
       font-size: 0.9rem;
-      color: #555;
+      color: #5e4432;
       margin-top: 0.5rem;
     }
     .map iframe {
@@ -100,13 +93,13 @@
       text-align: center;
       margin-top: 4rem;
       padding: 2rem;
-      background: #e0f2f1;
-      border: 2px dashed #009688;
+      background: #fbe9e7;
+      border: 2px dashed #a1887f;
       border-radius: 12px;
     }
     .coming-soon h2 {
       font-size: 2rem;
-      color: #00695c;
+      color: #4e342e;
       text-transform: uppercase;
       margin-bottom: 1rem;
     }
@@ -115,8 +108,8 @@
       color: #4e342e;
     }
     footer {
-      background-color: #263238;
-      color: #ccc;
+      background-color: #4e342e;
+      color: #fbe9e7;
       padding: 2rem 1rem;
       text-align: center;
     }
@@ -139,7 +132,6 @@
   <section id="brands" class="brand-section">
     <div class="brand">
       <h2>Food Affair</h2>
-      <img src="https://cdn.pixabay.com/photo/2016/03/05/19/02/abstract-1238247_960_720.jpg" alt="Food Affair">
       <p>Dine-in | Online Orders | Jain, Vegan, Satvik, Vaishnav Options</p>
       <p><em>"Coz, food never breaks hearts!"</em></p>
       <div class="buttons">
@@ -156,7 +148,6 @@
 
     <div class="brand">
       <h2>Jain Food House</h2>
-      <img src="https://cdn.pixabay.com/photo/2016/04/13/21/07/watercolor-1326013_960_720.jpg" alt="Jain Food House">
       <p>Strictly Jain cuisine — no onion, no garlic. 100% pure, delivered to your doorstep.</p>
       <div class="buttons">
         <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
@@ -166,7 +157,6 @@
 
     <div class="brand">
       <h2>Wok Of Love</h2>
-      <img src="https://cdn.pixabay.com/photo/2020/04/21/06/36/texture-5069629_960_720.jpg" alt="Wok Of Love">
       <p>Pure Veg Indo-Chinese delicacies — bold, fiery, and flavor-packed.</p>
       <div class="buttons">
         <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
