--- a/index.html
+++ b/index.html
@@ -149,7 +149,39 @@
   </section>
 
   <section id="brands" class="brand-section">
-    <!-- Brand cards stay unchanged -->
+    <div class="brand">
+      <h2>Food Affair</h2>
+      <p>Dine-in | Online Orders | Jain, Vegan, Satvik, Vaishnav Options</p>
+      <p><em>"Coz, food never breaks hearts!"</em></p>
+      <div class="buttons">
+        <a href="http://food-affair.in" target="_blank">Order on Website</a>
+        <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
+        <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
+        <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
+      </div>
+      <div class="review">⭐ 4.5 on Google (700+ reviews)</div>
+      <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62203.1991042479!2d77.55130241701906!3d12.91209574783088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157bfbcb8e75%3A0x8c8c02d2fc8b802f!2sFood%20Affair%20-%20Veg%20Family%20Restaurant!5e0!3m2!1sen!2sin!4v1718792481677!5m2!1sen!2sin" loading="lazy" allowfullscreen></iframe>
+      </div>
+    </div>
+
+    <div class="brand">
+      <h2>Jain Food House</h2>
+      <p>Strictly Jain cuisine — no onion, no garlic. 100% pure, delivered to your doorstep.</p>
+      <div class="buttons">
+        <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+        <a href="https://www.swiggy.com/city/bangalore/jain-food-court-vijaya-bank-colony-bilekahalli-rest532809" target="_blank">Swiggy</a>
+      </div>
+    </div>
+
+    <div class="brand">
+      <h2>Wok Of Love</h2>
+      <p>Pure Veg Indo-Chinese delicacies — bold, fiery, and flavor-packed.</p>
+      <div class="buttons">
+        <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+        <a href="https://www.swiggy.com/city/bangalore/wok-of-love-btm-4th-stage-arekere-rest966202" target="_blank">Swiggy</a>
+      </div>
+    </div>
   </section>
 
   <section class="coming-soon">
