--- a/index.html
+++ b/index.html
@@ -200,40 +200,51 @@
 </div>
 
   <section id="brands" class="brand-section">
-    <div class="brand">
-      <h2>Food Affair</h2>
-      <p>Dine-in | Online Orders | Jain, Vegan, Satvik, Vaishnav Options</p>
-      <p><em>"Coz, food never breaks hearts!"</em></p>
-      <div class="buttons">
-        <a href="http://food-affair.in" target="_blank">Order on Website</a>
-        <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
-        <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
-      </div>
-      <div class="review">⭐ 4.5 on Google (700+ reviews)</div>
-      <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62203.1991042479!2d77.55130241701906!3d12.91209574783088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157bfbcb8e75%3A0x8c8c02d2fc8b802f!2sFood%20Affair%20-%20Veg%20Family%20Restaurant!5e0!3m2!1sen!2sin!4v1718792481677!5m2!1sen!2sin" loading="lazy" allowfullscreen></iframe>
-      </div>
+  <div class="brand">
+    <img src="assets/images/food_affair_logo.png" alt="Food Affair Logo" style="max-width: 160px; display: block; margin: 0 auto 1rem;">
+    <p>Dine-in | Online Orders | Jain, Vegan, Satvik, Vaishnav Options</p>
+    <p><em>"Coz, food never breaks hearts!"</em></p>
+    <div class="buttons">
+      <a href="http://food-affair.in" target="_blank">Order on Website</a>
+      <a href="https://www.zomato.com/bangalore/food-affair-1-btm-bangalore" target="_blank">Zomato</a>
+      <a href="https://www.swiggy.com/restaurants/food-affair-btm-layout-bangalore-229422" target="_blank">Swiggy</a>
+      <a href="https://www.eazydiner.com/bengaluru/food-affair-veg-family-restaurant-btm-south-bengaluru-669910" target="_blank">EazyDiner</a>
     </div>
+    <div class="review">⭐ 4.5 on Google (700+ reviews)</div>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d62203.1991042479!2d77.55130241701906!3d12.91209574783088!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae157bfbcb8e75%3A0x8c8c02d2fc8b802f!2sFood%20Affair%20-%20Veg%20Family%20Restaurant!5e0!3m2!1sen!2sin!4v1718792481677!5m2!1sen!2sin" loading="lazy" allowfullscreen></iframe>
+    </div>
+  </div>
 
-    <div class="brand">
-      <h2>Jain Food House</h2>
-      <p>Strictly Jain cuisine — no onion, no garlic. 100% pure, delivered to your doorstep.</p>
-      <div class="buttons">
-        <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/city/bangalore/jain-food-court-vijaya-bank-colony-bilekahalli-rest532809" target="_blank">Swiggy</a>
-      </div>
+  <div class="brand">
+    <img src="assets/images/Jain_Food_House_logo.png" alt="Jain Food House Logo" style="max-width: 160px; display: block; margin: 0 auto 1rem;">
+    <p>Strictly Jain cuisine — no onion, no garlic. 100% pure, delivered to your doorstep.</p>
+    <div class="buttons">
+      <a href="https://www.zomato.com/bangalore/jain-food-house-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+      <a href="https://www.swiggy.com/city/bangalore/jain-food-court-vijaya-bank-colony-bilekahalli-rest532809" target="_blank">Swiggy</a>
     </div>
+  </div>
 
-    <div class="brand">
-      <h2>Wok Of Love</h2>
-      <p>Pure Veg Indo-Chinese delicacies — bold, fiery, and flavor-packed.</p>
-      <div class="buttons">
-        <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
-        <a href="https://www.swiggy.com/city/bangalore/wok-of-love-btm-4th-stage-arekere-rest966202" target="_blank">Swiggy</a>
-      </div>
+  <div class="brand">
+    <img src="assets/images/Wok-Of-Love-Final-Logo.png" alt="Wok Of Love Logo" style="max-width: 160px; display: block; margin: 0 auto 1rem;">
+    <p>Pure Veg Indo-Chinese delicacies — bold, fiery, and flavor-packed.</p>
+    <div class="buttons">
+      <a href="https://www.zomato.com/bangalore/wok-of-love-bannerghatta-road-bangalore" target="_blank">Zomato</a>
+      <a href="https://www.swiggy.com/city/bangalore/wok-of-love-btm-4th-stage-arekere-rest966202" target="_blank">Swiggy</a>
     </div>
-  </section>
+  </div>
+</section>
+
+<section class="carousel" style="margin-top: 3rem; text-align: center;">
+  <h2 style="margin-bottom: 1rem; font-size: 1.8rem; color: #4e342e;">Some of Our Specialties</h2>
+  <div style="display: flex; overflow-x: auto; scroll-snap-type: x mandatory; -webkit-overflow-scrolling: touch; gap: 1rem; padding: 1rem 0;">
+    <img src="assets/images/Gobhi Masala.jpg" alt="Gobhi Masala" style="height: 200px; scroll-snap-align: center; border-radius: 8px;">
+    <img src="assets/images/Paneer Tikka.jpg" alt="Paneer Tikka" style="height: 200px; scroll-snap-align: center; border-radius: 8px;">
+    <img src="assets/images/Fried Rice.jpg" alt="Fried Rice" style="height: 200px; scroll-snap-align: center; border-radius: 8px;">
+    <img src="assets/images/Schezwan Noodles.jpg" alt="Schezwan Noodles" style="height: 200px; scroll-snap-align: center; border-radius: 8px;">
+    <img src="assets/images/Dal Tadka.jpg" alt="Dal Tadka" style="height: 200px; scroll-snap-align: center; border-radius: 8px;">
+  </div>
+</section>
 
   <section class="coming-soon">
     <h2>More Brands Coming Soon</h2>
@@ -245,7 +256,7 @@
     <button class="close-btn" onclick="closeOverlay('contact')">&times;</button>
     <h2>Contact Us</h2>
     <p>📍 89 Ambika Corner, 2nd Floor, 11th Main, BTM 4th Stage, Vijaya Bank Layout, Bengaluru, Karnataka 560076</p>
-    <p>📞 +919019669175</p>
+    <p>📞 +91 98862 99822</p>
     <p>📧 <a href="mailto:foodaffair2024@gmail.com">foodaffair2024@gmail.com</a></p>
   </div>
 </div>
